--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
-# This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
-org.gradle.daemon=false
+modGroup=me.frogdog
+modVersion=0.0.32
+modBaseName=frogclient
+forgeVersion=1.12.2-14.23.5.2768
+mcpVersion=stable_39
