--- a/src/main/resources/frogclient_at.cfg
+++ b/src/main/resources/frogclient_at.cfg
@@ -1,69 +1,78 @@
-#obfuscated field and method names can be found in fields.csv in the gradle cache
-
-#horseChest
-public net.minecraft.entity.passive.AbstractHorse field_110296_bG
-
-#ip
-public net.minecraft.network.handshake.client.C00Handshake field_149598_b
-
-#port
-public net.minecraft.network.handshake.client.C00Handshake field_149599_c
-
-#zLevel
-public net.minecraft.client.gui.Gui field_73735_i
-
-#pressed
-public net.minecraft.client.settings.KeyBinding field_74513_e
-
-#renderPosX
-public net.minecraft.client.renderer.entity.RenderManager field_78725_b
-
-#renderPosY
-public net.minecraft.client.renderer.entity.RenderManager field_78726_c
-
-#renderPosZ
-public net.minecraft.client.renderer.entity.RenderManager field_78723_d
-
-public net.minecraft.item.ItemStack *
-
-#isHittingBlock
-public net.minecraft.client.multiplayer.PlayerControllerMP field_78778_j
-
-#onGround
-public net.minecraft.network.play.client.CPacketPlayer field_149474_g
-
-public net.minecraft.client.entity.EntityPlayerSP *
-
-#orientCamera
-public net.minecraft.client.renderer.EntityRenderer func_78467_g(F)V
-
-#setupCameraTransform
-public net.minecraft.client.renderer.EntityRenderer func_78479_a(FI)V
-
-public net.minecraft.client.renderer.EntityRenderer *
-
-public net.minecraft.client.gui.GuiScreen *
-
-public net.minecraft.entity.Entity *
-
-#rightclickDelayTimer
- public net.minecraft.client.Minecraft field_71467_ac
-
-#renderQuads
-public net.minecraft.client.renderer.RenderItem func_191970_a(Lnet/minecraft/client/renderer/BufferBuilder;Ljava/util/List;ILnet/minecraft/item/ItemStack;)V
-
-public net.minecraft.world.storage.WorldInfo *
-
- public net.minecraft.network.play.client.CPacketUseEntity field_149566_b
- public net.minecraft.entity.Entity func_70052_a(IZ)V
-
-#OffHand
-public net.minecraft.client.renderer.ItemRenderer *
-
-#RotationUtil
+#Took this from wurst plus 3 I wasnt bothered to go looking for all ats
+public net.minecraft.client.Minecraft *
+public net.minecraft.client.Minecraft *()
+public net.minecraft.entity.Entity * # All fields
+public net.minecraft.client.gui.GuiChat *
+public net.minecraft.world.chunk.storage.ExtendedBlockStorage * # All fields
+public net.minecraft.world.chunk.Chunk * # All fields
+public net.minecraft.client.renderer.RenderGlobal * # All fields
+public net.minecraft.client.renderer.RenderGlobal *() # All methods
+public net.minecraft.world.chunk.BlockStateContainer * # All fields
+public net.minecraft.client.renderer.EntityRenderer * # All fields
+public net.minecraft.client.renderer.EntityRenderer *() # All methods
+public net.minecraft.server.management.PlayerList * # All fields
+public net.minecraft.server.management.PlayerInteractionManager * # All fields
+public net.minecraft.client.multiplayer.PlayerControllerMP * # All fields
+public net.minecraft.client.multiplayer.PlayerControllerMP *() # All methods
+public net.minecraft.network.NetHandlerPlayServer * # All fields
+public net.minecraft.world.WorldServer * # All fields
+public net.minecraft.server.management.PlayerChunkMap * # All fields
+public net.minecraft.server.management.PlayerChunkMap *() # All methods
+public-f net.minecraft.server.management.PlayerChunkMapEntry * # All fields
+public net.minecraft.server.management.PlayerChunkMapEntry *() # All methods
+public net.minecraft.network.play.client.CPacketChatMessage field_149440_a # message
+public net.minecraft.network.play.server.SPacketEffect * # All fields
+public net.minecraft.network.play.server.SPacketSoundEffect * # All fields
+public net.minecraft.network.play.client.CPacketUpdateSign *
+public net.minecraft.client.particle.Particle * # All fields
+public net.minecraft.world.ChunkCache * # All fields
+public net.minecraft.util.ObjectIntIdentityMap * # All fields
+public net.minecraft.entity.player.EntityPlayerMP * # All fields
+public net.minecraft.block.Block * # All fields
+public net.minecraft.world.Explosion * # All fields
+#public net.minecraft.client.renderer.VertexBuffer * # All fields
+public net.minecraft.entity.player.InventoryPlayer * # All fields
+public net.minecraft.entity.item.EntityFallingBlock * # All fields
+public net.minecraft.world.Explosion * # All fields
+public net.minecraft.item.ItemStack * # All fields
+public net.minecraft.world.chunk.EmptyChunk *() # All methods
+public net.minecraft.client.renderer.tileentity.TileEntityRendererDispatcher * # All fields
+public net.minecraft.entity.player.EntityPlayer * # All fields
+public net.minecraft.util.math.BlockPos * # All fields
+public net.minecraft.world.border.WorldBorder * # All fields
+public net.minecraft.world.border.WorldBorder *() # All methods
+public-f net.minecraft.util.math.Vec3i * #All fields
+public net.minecraft.client.gui.GuiTextField *
+public net.minecraft.client.gui.FontRenderer *
+public net.minecraft.client.gui.inventory.GuiEditSign * # All fields
+public net.minecraft.client.gui.GuiDisconnected *
+public net.minecraft.client.multiplayer.GuiConnecting *
+public net.minecraft.network.NetworkManager *
+public net.minecraft.network.play.server.SPacketEntityVelocity *
+public net.minecraft.network.play.server.SPacketExplosion *
 public net.minecraft.network.play.client.CPacketPlayer *
-
-
-public net.minecraft.client.Minecraft * # All fields
-public net.minecraft.client.Minecraft *() # All fields
+public net.minecraft.network.play.server.SPacketPlayerPosLook *
+#public net.minecraft.network.play.server.SPacketChat *
+public net.minecraft.network.play.server.SPacketChat field_148919_a #text
+public net.minecraft.client.renderer.entity.RenderManager *
+public net.minecraft.client.renderer.BufferBuilder *
+public net.minecraft.client.renderer.BlockModelRenderer *
+public net.minecraft.client.renderer.BlockModelRenderer *()
+public net.minecraft.pathfinding.Path *
+public net.minecraft.client.gui.GuiBossOverlay *
+public net.minecraft.client.gui.GuiBossOverlay func_184052_a(IILnet/minecraft/world/BossInfo;)V
+public net.minecraft.tileentity.TileEntity field_145854_h # blockType
+public net.minecraft.item.ItemTool field_77865_bY # attackDamage
+public-f net.minecraft.util.text.TextComponentString field_150267_b # text
+public net.minecraft.client.renderer.ActiveRenderInfo *
+public net.minecraft.entity.projectile.EntityThrowable field_85053_h
+public net.minecraft.util.Timer field_194149_e #ticklength
+public net.minecraft.entity.player.PlayerCapabilities *
+public net.minecraft.network.play.client.CPacketCloseWindow field_149556_a # windowId
+public net.minecraft.client.renderer.ItemRenderer field_187470_g
+public net.minecraft.client.renderer.ItemRenderer field_187469_f
+public net.minecraft.client.renderer.ItemRenderer field_187467_d
+public net.minecraft.client.renderer.entity.layers.LayerArmorBase func_188361_a(Lnet/minecraft/entity/EntityLivingBase;FFFFFFFLnet/minecraft/inventory/EntityEquipmentSlot;)V
+public net.minecraft.client.renderer.entity.Render func_180548_c(Lnet/minecraft/entity/Entity;)Z
+public net.minecraft.client.renderer.ItemRenderer *
 
