--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,9 @@ apply plugin: 'eclipse'
 apply plugin: 'org.spongepowered.mixin'
 apply plugin: 'com.github.johnrengelman.shadow'
 
-version = '1.3.4'
-group = 'mod.hitlerhax'
-archivesBaseName = 'hitlerhax'
+version = '0.0.2'
+group = 'me.frogdog.hecks'
+archivesBaseName = 'hecks'
 
 sourceCompatibility = targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 compileJava {
@@ -28,7 +28,7 @@ compileJava {
 minecraft {
     version = '1.12.2-14.23.5.2768'
     runDir = 'run'
-    coreMod = 'mod.hitlerhax.mixin.HtlrMixinLoader'
+    coreMod = 'me.frogdog.hecks.mixin.MixinLoader'
     mappings = 'stable_39'
     makeObfSourceJar = false
 }
@@ -41,10 +41,6 @@ repositories {
 }
 
 dependencies {
-    compile('com.github.zeromemes:Alpine:1.9') {
-        exclude module: 'typetools'
-    }
-    compile 'net.jodah:typetools:0.6.3'
     compile('org.spongepowered:mixin:0.7.11-SNAPSHOT') {
         exclude module: 'commons-io'
         exclude module: 'guava'
@@ -59,8 +55,6 @@ shadowJar {
     dependencies {
         include dependency('club.minnced:java-discord-rpc:2.0.2')
         include dependency('club.minnced:discord-rpc-release:v3.4.0')
-        include dependency('com.github.zeromemes:Alpine:1.9')
-        include dependency('net.jodah:typetools')
         include dependency('org.javassist:javassist')
         include dependency('org.spongepowered:mixin')
     }
@@ -71,7 +65,7 @@ mixin {
     defaultObfuscationEnv searge
     sourceSets {
         main {
-            ext.refMap = 'mixins.hitlerhax.refmap.json'
+            ext.refMap = 'mixins.hecks.refmap.json'
         }
     }
 }
@@ -106,8 +100,8 @@ jar {
         attributes(
                 'FMLCorePluginContainsFMLMod': 'true',
                 'ForceLoadAsMod': 'true',
-                'FMLCorePlugin': 'mod.hitlerhax.mixin.HtlrMixinLoader',
-                'MixinConfigs': 'mixins.hitlerhax.json',
+                'FMLCorePlugin': 'me.frogdog.hecks.mixin.MixinLoader',
+                'MixinConfigs': 'mixins.hecks.json',
                 'tweakClass': 'org.spongepowered.asm.launch.MixinTweaker',
                 'TweakOrder': 0,
                 'FMLAT': 'hecks_at.cfg'
